k8s/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kojirer
spec:
  template:
    spec:
      containers:
        - name: kojirer
          readinessProbe:
            httpGet: { path: /healthz, port: 52600 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /healthz, port: 52600 }
            initialDelaySeconds: 15
            periodSeconds: 20
